# nat_simulator

./: README.md  pyproject.toml
nat_simulator/: defs.py  delta.py  nat.py  predict_engine.py  ring_int.py  router.py  utils.py
nat_simulator/delta_types/: dependent.py  equal.py  independent.py  preserving.py  random.py
nat_simulator/nat_types/: blocked.py  full_cone.py  open_internet.py  restrict.py  restrict_port.py  symmetric.py
nat_simulator/tests/: main.py
