[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nat_simulator"
version = "0.1.0"
description = "Models of NATs usable for prediction in hole-punching protocols."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Matthew Roberts", email = "matthew@roberts.pm" }]

[tool.setuptools]
packages = ["nat_simulator"]
